ADD seller orders

--- a/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
+++ b/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
@@ -186,7 +186,7 @@
                         </div>
                         </div>
                 } @empty {
-                    <div class="min-h-19 dark:text-gray-600 text-center dark:text-gray-400">{{ 'PRODUCT_INVENTORY._not_found' | translate }}.</div>
+                    <div class="min-h-19 dark:text-gray-600 text-center dark:text-gray-400">{{ 'PRODUCT_INVENTORY._not_found' | translate }}</div>
                 }
             </div>
             @if (!loading_more) {
