ADD new card mockup

--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -18,6 +18,11 @@
       @for (cat of categories; track cat.id) {
         <bae-badge class="mr-2" [category]=cat></bae-badge>
       }
+      @if(checkMoreCats){
+        <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-secondary-50 bg-primary-100 dark:bg-secondary-50 dark:text-primary-100 mb-2 mr-2">        
+          ...
+        </a>
+      }
       <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2"
       [ngClass]="complianceLevel == 1 ? 'bg-red-200 text-red-700' : complianceLevel == 2 ? 'bg-yellow-200 text-yellow-700' : 'bg-green-200 text-green-700'">
       <fa-icon [icon]="faAtom" class="mr-2" [ngClass]="complianceLevel == 1 ? 'text-red-700' : complianceLevel == 2 ? 'text-yellow-700' : 'text-green-700'"></fa-icon>
@@ -137,7 +142,17 @@
                           } @else {
                               Level 3
                           }
-                      </a>                      
+                      </a>
+                      @if(loadMoreCats){
+                        @for (cat of categoriesMore; track cat.id) {
+                          <bae-badge class="mr-2" [category]=cat></bae-badge>
+                        }
+                      }
+                      @if(checkMoreCats){
+                        <a (click)="loadMoreCategories()" class="cursor-pointer text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-secondary-50 bg-primary-100 dark:bg-secondary-50 dark:text-primary-100 mb-2">        
+                          ...
+                        </a>
+                      }               
                   </div>
               </div>
 
