--- a/src/app/offerings/explore-dome/explore-dome.component.html
+++ b/src/app/offerings/explore-dome/explore-dome.component.html
@@ -19,16 +19,16 @@
     
             </div>
 
-            <!-- <div class="flex items-center justify-center pb-8">
-                <button type="button" class="h-fit w-fit text-primary-100 bg-white hover:bg-primary-50 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+            <div class="flex items-center justify-center pb-8">
+                <a href="{{domeAbout}}" target="_blank" class="h-fit w-fit text-primary-100 bg-white hover:bg-primary-50 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                     
                     <svg class="mr-2 rtl:rotate-180 w-3.5 h-3.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg>
                     {{ 'EXPLORE._go' | translate }}
-                </button>
+                </a>
                    
-            </div> -->
+            </div>
         </div>
 
     </div>
