--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -250,7 +250,7 @@
                         }
                         @if(productOff?.productOfferingPrice?.length==0){
                             <div class="inline-flex items-center justify-center w-full">
-                                <div class="max-w-sm bg-white border border-gray-200  rounded-lg shadow w-full">
+                                <div class="mx-auto bg-white border border-gray-200  rounded-lg shadow w-full">
                                     <div class="bg-blue-500 rounded-t-lg w-full">
                                         <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{ 'SHOPPING_CART._free' | translate }}</h5>
                                     </div>
@@ -260,38 +260,39 @@
                         }
                     </div>   
                 } @else {
-                    <div class="grid grid-flow-row gap-4 lg:grid-cols-3 lg:auto-cols-auto justify-items-center p-2">
+                    <div class="grid grid-flow-row gap-4 lg:grid-cols-2 lg:auto-cols-auto justify-items-center p-2">
                         @for (price of productOff?.productOfferingPrice; track price.id) {
                             @if (price.priceType == 'recurring') {
-                                <div class="max-w-sm bg-white dark:bg-secondary-200 dark:border-gray-800 border border-gray-200 rounded-lg shadow w-full">
+                                <div class="mx-auto bg-white dark:bg-secondary-200 dark:border-gray-800 border border-gray-200 rounded-lg shadow w-full">
                                     <div class="bg-green-500 rounded-t-lg w-full text-wrap break-all">
                                         <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900 w-full">{{price.name}}</h5>
                                     </div>
-                                    <p class="flex justify-center font-normal text-gray-700 dark:text-white"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
-                                    <p class="flex justify-center font-normal text-gray-700 dark:text-white">/{{price.recurringChargePeriodType}}</p>
-                                    <p class="flex justify-center mb-2 p-4 font-normal text-gray-700 dark:text-white text-wrap break-all">{{price.description}}</p>
+                                    <div class="pl-4 pr-4">
+                                        <markdown class="dark:text-gray-200 w-full p-4 text-wrap break-all" [data]="price?.description"></markdown>
+                                    </div>
                                 </div>
                             } @else if (price.priceType == 'usage') {
-                                <div class="max-w-sm bg-white border border-gray-200 dark:bg-secondary-200 dark:border-gray-800 rounded-lg shadow w-full">
+                                <div class="mx-auto bg-white border border-gray-200 dark:bg-secondary-200 dark:border-gray-800 rounded-lg shadow w-full">
                                     <div class="bg-yellow-300 rounded-t-lg w-full">
                                         <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900 text-wrap break-all">{{price.name}}</h5>
                                     </div>
-                                    <p class="flex justify-center font-normal text-gray-700 dark:text-white"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
-                                    <p class="flex justify-center font-normal text-gray-700 dark:text-white">/{{price.unitOfMeasure?.units}}</p>
-                                    <p class="flex justify-center mb-2 p-4 font-normal text-gray-700 dark:text-white text-wrap break-all">{{price.description}}</p>
+                                    <div class="pl-4 pr-4">
+                                        <markdown class="dark:text-gray-200 w-full p-4 text-wrap break-all" [data]="price?.description"></markdown>
+                                    </div>
                                 </div>
                             } @else {
-                                <div class="max-w-sm bg-white border border-gray-200 dark:bg-secondary-200 dark:border-gray-800 rounded-lg shadow w-full">
+                                <div class="mx-auto bg-white border border-gray-200 dark:bg-secondary-200 dark:border-gray-800 rounded-lg shadow w-full">
                                     <div class="bg-blue-500 rounded-t-lg w-full">
                                         <h5 class="flex justify-center mb-4 p-6 text-2xl font-bold tracking-tight text-gray-900 text-wrap break-all">{{price.name}}</h5>
                                     </div>
-                                    <p class="flex justify-center font-normal text-gray-700 dark:text-white"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
-                                    <p class="flex justify-center mb-2 p-4 font-normal text-gray-700 dark:text-white text-wrap break-all">{{price.description}}</p>
+                                    <div class="pl-4 pr-4">
+                                        <markdown class="dark:text-gray-200 w-full p-4 text-wrap break-all" [data]="price?.description"></markdown>
+                                    </div>                                   
                                 </div>
                             }
                         }
                         @if(productOff?.productOfferingPrice?.length==0){
-                            <div class="max-w-sm bg-white border border-gray-200 dark:bg-secondary-200 dark:border-gray-800 rounded-lg shadow w-full">
+                            <div class="mx-auto bg-white border border-gray-200 dark:bg-secondary-200 dark:border-gray-800 rounded-lg shadow w-full">
                                 <div class="bg-blue-500 rounded-t-lg w-full">
                                     <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{ 'SHOPPING_CART._free' | translate }}</h5>
                                 </div>
