--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,32 +1,25 @@
 
 <div class="dark:bg-secondary-200">
   <!-- Jumbo section -->
-  <section id="jumbo" class="w-full items-center">
-      <div class="flex flex-col md:flex-row pt-8 pb-8 px-4 w-full text-center lg:pt-16 lg:px-12 bg-cover bg-right-bottom items-center" style="background-image: url(assets/images/bg_1_shadow.png)">
+  <section id="jumbo" class="w-full ">
+      <div class="flex flex-col md:flex-row pt-8 pb-8 px-4 w-full text-left lg:pt-16 lg:px-12 bg-cover bg-right-bottom items-center justify-between" style="background-image: url(assets/images/bg_1_shadow.png)">
           <!--<a href="#" class="inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm rounded-full bg-gray-800 text-white hover:bg-gray-700" role="alert">
             <span class="text-xs bg-primary-100 rounded-full text-white px-4 py-1.5 mr-3">{{ 'DASHBOARD._new' | translate }}</span> <span class="text-sm font-medium">{{ 'DASHBOARD._title' | translate }}</span>
             <svg class="ml-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
           </a>-->
-          <div>
-            <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl lg:text-6xl text-secondary-50">{{ 'DASHBOARD._header' | translate }}</h1>
-            <p class="mb-8 text-lg font-normal lg:text-xl sm:px-16 xl:px-48 text-secondary-50">{{ 'DASHBOARD._subheader' | translate }}</p>
-            <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-              <button (click)="goTo('/search')"
-              class="inline-flex justify-center items-center border border-1 border-white py-3 px-5 text-base font-medium text-center text-white rounded-lg hover:bg-primary-50 ">
-              <svg class=" mr-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>  
-              {{ 'DASHBOARD._browse_serv' | translate }}
-                
+          <div class="p-8">
+            <h1 class="mb-4 text-left text-4xl font-extrabold tracking-tight md:text-5xl lg:text-6xl text-secondary-50">{{ 'DASHBOARD._header' | translate }}</h1>
+            <p class="text-left mb-8 text-lg font-normal lg:text-xl text-secondary-50">{{ 'DASHBOARD._subheader' | translate }}</p>
+            <button (click)="goTo('/search')"
+            class="inline-flex justify-left items-center border border-1 border-white py-3 px-5 text-base font-medium text-center text-white rounded-lg hover:bg-primary-50 ">
+            <svg class=" mr-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>  
+            {{ 'DASHBOARD._browse_serv' | translate }}              
             </button>
-              <!--<a href="https://www.youtube.com/shorts/UKUlFzyIHxY" target="_blank" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center rounded-lg border text-white border-white hover:bg-primary-50 focus:ring-gray-800">
-                <svg class="mr-2 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z"></path></svg>
-                {{ 'DASHBOARD._video' | translate }}
-              </a>-->
-            </div>
           </div>
-          <div class="mt-4 md:mt-0 bg-secondary-300 bg-opacity-50 rounded-lg">
-            <div class="w-full p-8 rounded-lg shadow-lg">
+          <div class="mt-4 md:mt-0 bg-secondary-300 bg-opacity-50 rounded-lg w-full md:w-1/4">
+            <div class="w-full p-8 rounded-lg shadow-lg ">
               <div class="flex flex-col">
-                <p class="mb-8 text-lg font-normal lg:text-xl sm:px-16 xl:px-48 text-secondary-50">75 verified services</p>
+                <p class="mb-8 text-left text-lg font-normal lg:text-xl text-secondary-50">75 verified services</p>
                 @for(serv of services;track serv;let pos = $index){
                   <a [ngClass]="{ 'hidden': currentIndexServ !== pos }" class="text-md mb-2 font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-primary-100 bg-secondary-50 w-fit animate-fadeInOut">
                     {{serv}}
@@ -34,7 +27,7 @@
                 }
               </div>
               <div class="flex flex-col">
-                <p class="mb-8 text-lg font-normal lg:text-xl sm:px-16 xl:px-48 text-secondary-50">12 registered publishers</p>
+                <p class="mb-8 text-left text-lg font-normal lg:text-xl text-secondary-50">12 registered publishers</p>
                 @for(pub of publishers;track pub;let pos = $index){
                   <a [ngClass]="{ 'hidden': currentIndexPub !== pos }" class="text-md mb-2 font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-primary-100 bg-secondary-50 w-fit animate-fadeInOut">
                     {{pub}}
@@ -42,7 +35,7 @@
                 }
               </div>
 
-              <a href="{{domePublish}}" target="_blank" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+              <a href="{{domePublish}}" target="_blank" class="mt-8 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
                 <svg class="mr-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                 {{ 'HEADER._publish' | translate }}                
               </a>
@@ -76,6 +69,7 @@
     <bae-off-gallery></bae-off-gallery>  
     <app-platform-benefits></app-platform-benefits>  
     <app-explore-dome></app-explore-dome>
+    <!--<app-faq></app-faq>-->
   
     <!-- @if(showContact){
       <contact-us [ngClass]="showContact ? 'backdrop-blur-sm': ''" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full shadow-2xl"></contact-us>
