--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
           <div class="mt-4 md:mt-0 bg-secondary-300 bg-opacity-50 rounded-lg w-full md:w-1/4">
             <div class="w-full p-8 rounded-lg shadow-lg ">
               <div class="flex flex-col">
-                <p class="mb-8 text-left text-lg font-normal lg:text-xl text-secondary-50">75 verified services</p>
+                <p class="mb-2 text-left text-lg font-normal lg:text-xl text-secondary-50">{{services.length}} verified services</p>
                 @for(serv of services;track serv;let pos = $index){
                   <a [ngClass]="{ 'hidden': currentIndexServ !== pos }" class="text-md mb-2 font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-primary-100 bg-secondary-50 w-fit animate-fadeInOut">
                     {{serv}}
@@ -27,9 +27,9 @@
                 }
               </div>
               <div class="flex flex-col">
-                <p class="mb-8 text-left text-lg font-normal lg:text-xl text-secondary-50">12 registered publishers</p>
+                <p class="mb-2 text-left text-lg font-normal lg:text-xl text-secondary-50">{{publishers.length}} registered publishers</p>
                 @for(pub of publishers;track pub;let pos = $index){
-                  <a [ngClass]="{ 'hidden': currentIndexPub !== pos }" class="text-md mb-2 font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-primary-100 bg-secondary-50 w-fit animate-fadeInOut">
+                  <a [ngClass]="{ 'hidden': currentIndexPub !== pos }" class="text-md font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-primary-100 bg-secondary-50 w-fit animate-fadeInOut">
                     {{pub}}
                   </a>
                 }
