--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -146,12 +146,12 @@
                 <img class="rounded-r-lg h-5/6 w-5/6 object-contain z-10" src="{{getProductImage()}}" alt="product image" />
               </div>
 
-              <!--
-                <div [ngClass]="closeCats ? 'h-fit' : 'h-[200px]'" class="relative min-h-[200px] overflow-hidden flex justify-center items-center border border-1 border-gray-200 dark:border-gray-700 rounded-tr-lg">
+              
+              <!--<div [ngClass]="closeCats ? 'object-contain' : 'h-[200px]'" class="relative min-h-[200px] overflow-hidden flex justify-center items-center border border-1 border-gray-200 dark:border-gray-700 rounded-tr-lg">
                 <div class="absolute inset-0 bg-cover bg-center opacity-75" style="background-image: url({{getProductImage()}});filter: blur(20px);"></div>
                 <img class="rounded-r-lg h-5/6 w-5/6 object-contain z-10" src="{{getProductImage()}}" alt="product image" />
-              </div>
-              -->
+              </div>-->
+            
               <hr class="h-px border-gray-200 border-1 dark:border-gray-700">
           </div>
 
