ADD contact-us new form + fixes

--- a/src/app/pages/catalogs/catalogs.component.html
+++ b/src/app/pages/catalogs/catalogs.component.html
@@ -35,8 +35,8 @@
 
                 <div (click)="goToCatalogSearch(cat.id)" class="block cursor-pointer rounded-lg bg-cover" style="background-image: url(assets/logos/dome-logo-element-colour.png);" >
                     <div class="block w-full h-full p-6 bg-opacity-100 bg-secondary-50 rounded-lg dark:bg-secondary-100 bg-secondary-50/90 dark:bg-secondary-100/90 bg-cover">
-                        <h5 class="text-2xl font-bold tracking-tight text-primary-100 dark:text-white text-wrap break-all">{{cat.name}}</h5>
-                        <markdown class="bg-gray-50 text-wrap break-all dark:bg-secondary-300 dark:text-white text-gray-900" [data]="cat.description ? cat.description : 'CATALOGS._no_desc' | translate"></markdown>
+                        <h5 class="text-2xl font-bold line-clamp-2 tracking-tight text-primary-100 dark:text-white text-wrap break-all">{{cat.name}}</h5>
+                        <markdown class="line-clamp-4 text-wrap break-all dark:text-white text-gray-900" [data]="cat.description ? cat.description : 'CATALOGS._no_desc' | translate"></markdown>
                         <hr class="h-px my-1 bg-primary-100 border-0 dark:bg-primary-100">
                         <div class="">
                           @for(category of cat.category; track category.id) {
