--- a/src/app/pages/seller-offerings/offerings/seller-service-spec/create-service-spec/create-service-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-service-spec/create-service-spec/create-service-spec.component.html
@@ -227,7 +227,7 @@
                                         <td class="px-6 py-4 text-wrap break-all">
                                             {{prod.name}}
                                         </td>
-                                        <td class="px-6 py-4 text-wrap break-all">
+                                        <td class="hidden lg:table-cell px-6 py-4 text-wrap break-all">
                                             {{prod.description}}                                       
                                         </td>
                                         <td class="px-6 py-4 text-wrap break-all">
