--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -12,7 +12,7 @@
       <a href="../assets/documents/terms.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._licensing' | translate }}</a>
     </li>
     <li>
-      <a href="https://app.getonepass.eu/invite/8Zw5HETsNr" target="_blank" class="hover:underline">{{ 'FOOTER._contact' | translate }}</a>
+      <a (click)="goTo('/contact-us')" target="_blank" class="hover:underline cursor-pointer">{{ 'FOOTER._contact' | translate }}</a>
     </li>
   </ul>
 </footer>
