--- a/src/app/pages/organization-details/organization-details.component.html
+++ b/src/app/pages/organization-details/organization-details.component.html
@@ -31,11 +31,11 @@
         <div class="grid grid-rows-auto p-4 md:p-8 h-fit">
             <div class="mt-2 h-fit">
                 <!--<a href="#">-->
-                <h5 class="text-3xl lg:text-4xl font-semibold tracking-tight text-primary-100 dark:text-white">{{orgInfo?.tradingName}}</h5>
+                <h5 class="text-3xl lg:text-4xl font-semibold tracking-tight text-primary-100 dark:text-white line-clamp-3 text-wrap break-all">{{orgInfo?.tradingName}}</h5>
                 <!--</a>-->
             </div>
             <div class="pt-2 line-clamp-5 h-fit">
-                <a href="{{website}}" target="_blank" class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline">{{website}}</a>
+                <a href="{{website}}" target="_blank" class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline line-clamp-2 text-wrap break-all">{{website}}</a>
             </div>
         </div>
         <div class="hidden lg:block overflow-hidden rounded-r-lg">
